--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,27 @@
 = icu-chardet-ffi
 
-Description goes here.
+Tiny FFI wrapper for ICU's UCharsetDetector.
+
+= Why not just use rchardet?
+
+ - this is faster
+ - rchardet does not work well on 1.9
+ - none of the rchardet forks claiming to work on 1.9 actually does
+
+= USAGE:
+
+  match = ICUCharDet.detect(str)
+  match.name       # => String
+  match.confidence # => Integer
+
+  or
+
+  detector = ICUCharDet::Detector.new
+  detector.detect(str) #=> match
+  detector.close
 
 == Note on Patches/Pull Requests
- 
+
 * Fork the project.
 * Make your feature addition or bug fix.
 * Add tests for it. This is important so I don't break it in a
