--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,10 @@ Simple FFI wrappers for things I need from ICU. For the full thing, check out IC
 
 = Dependencies
 
-ICU - you might need to hack the ffi_lib call to make it work. Please send a patch if you do!
+ICU. If you get messages that the library or functions are not found, you can 
+set some env vars to tell ffi-icu where to find it:
+
+...
 
 = Features
 
