--- a/README.rdoc
+++ b/README.rdoc
@@ -82,4 +82,4 @@ Rubies:
 
 == Copyright
 
-Copyright (c) 2010 Jari Bakken. See LICENSE for details.
+Copyright (c) 2010-2011 Jari Bakken. See LICENSE for details.
