--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ruby-ffi-icu (0.1.4-2.solnet2) release; urgency=medium
+
+  * přidání ICU::DateTimeFormatter.parse(str)
+
+ -- Marek Veber <Marek.Veber@solnet.cz>  Fri, 13 Mar 2015 16:23:49 +0100
+
 ruby-ffi-icu (0.1.4-2.solnet1) release; urgency=medium
 
   * Initial release from upstream
