--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ruby-ffi-icu (0.1.6.solnet6) UNRELEASED; urgency=low
+
+  * fix - podpora pro formát TZ
+
+ -- Marek Veber <Marek.Veber@solnet.cz>  Thu, 09 Jul 2015 02:23:18 +0200
+
 ruby-ffi-icu (0.1.6.solnet5) wheezy; urgency=medium
 
   * merge with upstream version 0.1.6
